More infrastructure for building trend lines

--- a/Core/BurndownExt/BurndownExt.vcxproj.filters
+++ b/Core/BurndownExt/BurndownExt.vcxproj.filters
@@ -81,5 +81,8 @@
     <ClInclude Include="BurndownEnum.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BurndownStatic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
