--- a/Core/WorkloadExt/WorkloadExt.vcxproj
+++ b/Core/WorkloadExt/WorkloadExt.vcxproj
@@ -167,7 +167,6 @@ copy unicode_release\WorkloadExt.dll ..\todolist\unicode_release /y</Command>
   <ItemGroup>
     <CustomBuild Include="WorkloadExt.def" />
     <CustomBuild Include="res\help_button.ico" />
-    <CustomBuild Include="res\icon1.ico" />
     <CustomBuild Include="res\toolbar.bmp" />
     <CustomBuild Include="res\toolbar_std.bmp" />
     <CustomBuild Include="res\WorkloadExt.rc2">
@@ -202,9 +201,11 @@ copy unicode_release\WorkloadExt.dll ..\todolist\unicode_release /y</Command>
   <ItemGroup>
     <ProjectReference Include="..\3rdParty\3rdParty.vcxproj">
       <Project>{e15c17b8-c080-492f-bbb8-bf9e84a0ea31}</Project>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
     <ProjectReference Include="..\Shared\Shared.vcxproj">
       <Project>{95605899-9c90-40d8-8774-d1da1fce7464}</Project>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
