Copy icon to local resource folder

--- a/Core/ConvertRTFToHTML/ConvertRTFToHTML.vcxproj
+++ b/Core/ConvertRTFToHTML/ConvertRTFToHTML.vcxproj
@@ -226,6 +226,7 @@
   <ItemGroup>
     <None Include="..\ToDoList\res\fileedit_browse.ico" />
     <None Include="res\ConvertRTFToHTML.rc2" />
+    <None Include="res\fileedit_browse.ico" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\ConvertRTFToHTML.ico" />
