--- a/Core/Shared/Shared.vcxproj.filters
+++ b/Core/Shared/Shared.vcxproj.filters
@@ -487,6 +487,9 @@
     <ClCompile Include="TreeListCtrl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UrlParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -1009,6 +1012,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TreeListCtrl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UrlParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
