--- a/Core/WorkloadExt/WorkloadExt.rc
+++ b/Core/WorkloadExt/WorkloadExt.rc
@@ -154,7 +154,7 @@ BEGIN
     CONTROL         "",IDC_PPHOST,"Static",SS_GRAYFRAME,7,7,359,185
 END
 
-IDD_PREFERENCES_PAGE DIALOG DISCARDABLE  0, 0, 347, 238
+IDD_PREFERENCES_PAGE DIALOG DISCARDABLE  0, 0, 347, 262
 STYLE WS_CHILD
 FONT 8, "Tahoma"
 BEGIN
@@ -183,14 +183,17 @@ BEGIN
     COMBOBOX        IDC_OVERLOADFROMPERCENT,18,174,31,143,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
     LTEXT           "% - 100%",IDC_STATIC,51,174,34,12,SS_CENTERIMAGE
-    PUSHBUTTON      "Set...",IDC_SETOVERLOADCOLOR,95,174,47,14,BS_RIGHT
+    PUSHBUTTON      "Set...",IDC_SETOVERLOADCOLOR,149,174,47,14,BS_RIGHT
     CONTROL         "&Enable 'Underload' display",IDC_ENABLEUNDERLOAD,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,195,333,10
     LTEXT           "0% - ",IDC_STATIC,19,210,19,12,SS_CENTERIMAGE
     COMBOBOX        IDC_UNDERLOADTOPERCENT,37,210,31,143,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
     LTEXT           "%",IDC_STATIC,71,210,8,12,SS_CENTERIMAGE
-    PUSHBUTTON      "Set...",IDC_SETUNDERLOADCOLOR,95,210,47,14,BS_RIGHT
+    PUSHBUTTON      "Set...",IDC_SETUNDERLOADCOLOR,149,210,47,14,BS_RIGHT
+    CONTROL         "'Overlapping' tasks colour",IDC_ENABLEOVERLAPCOLOR,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,232,97,10
+    PUSHBUTTON      "Set...",IDC_SETOVERLAPCOLOR,149,230,47,14,BS_RIGHT
 END
 
 IDD_EDITALLOCATIONS_DIALOG DIALOG DISCARDABLE  0, 0, 270, 163
@@ -230,7 +233,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 340
         TOPMARGIN, 7
-        BOTTOMMARGIN, 231
+        BOTTOMMARGIN, 255
     END
 
     IDD_EDITALLOCATIONS_DIALOG, DIALOG
