--- a/Core/BurndownExt/BurndownExt.vcxproj.filters
+++ b/Core/BurndownExt/BurndownExt.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="BurndownTrendComboBox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BurndownPreferencesDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="BurndownExt.def">
@@ -57,6 +60,9 @@
       <Filter>Resource Files</Filter>
     </None>
     <None Include="res\toolbar.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\help_button.ico">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
@@ -100,6 +106,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BurndownTrendComboBox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BurndownPreferencesDlg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
