Start work on graph colour preferences

--- a/Core/BurndownExt/BurndownExt.vcxproj
+++ b/Core/BurndownExt/BurndownExt.vcxproj
@@ -169,6 +169,7 @@ copy unicode_debug\burndownext.dll ..\todolist\unicode_debug /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="BurndownGraphColorListCtrl.cpp" />
     <ClCompile Include="BurndownGraphComboBox.cpp" />
     <ClCompile Include="BurndownGraphs.cpp" />
     <ClCompile Include="BurndownPreferencesDlg.cpp" />
@@ -203,6 +204,7 @@ copy unicode_debug\burndownext.dll ..\todolist\unicode_debug /y
     <ClInclude Include="BurndownCalculator.h" />
     <ClInclude Include="BurndownChart.h" />
     <ClInclude Include="BurndownEnum.h" />
+    <ClInclude Include="BurndownGraphColorListCtrl.h" />
     <ClInclude Include="BurndownGraphComboBox.h" />
     <ClInclude Include="BurndownGraphs.h" />
     <ClInclude Include="BurndownPreferencesDlg.h" />
