--- a/Core/BurndownExt/BurndownExt.rc
+++ b/Core/BurndownExt/BurndownExt.rc
@@ -158,10 +158,18 @@ BEGIN
                     WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_PREFERENCES_PAGE DIALOG DISCARDABLE  0, 0, 347, 262
+IDD_PREFERENCES_PAGE DIALOG DISCARDABLE  0, 0, 347, 196
 STYLE WS_CHILD
 FONT 8, "Tahoma"
 BEGIN
+    CONTROL         "'&Today' colour",IDC_TODAYCOLOR,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,9,131,10
+    PUSHBUTTON      "S&et...   ",IDC_SETTODAYCOLOR,147,7,52,13,BS_RIGHT
+    CONTROL         "List1",IDC_GRAPHCOLORS,"SysListView32",LVS_REPORT | 
+                    LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_OWNERDRAWFIXED | 
+                    LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_BORDER | 
+                    WS_TABSTOP,7,39,266,142
+    LTEXT           "Graph content colours",IDC_STATIC,7,27,223,8
 END
 
 IDD_PREFERENCES_DIALOG DIALOG DISCARDABLE  0, 0, 373, 223
@@ -193,7 +201,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 340
         TOPMARGIN, 7
-        BOTTOMMARGIN, 255
+        BOTTOMMARGIN, 189
     END
 
     IDD_PREFERENCES_DIALOG, DIALOG
